Implementação de linguagem de programação JS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="p-30">
 
             <p class="justify">
-                Justin Drew Bieber (London, 1 de março de 1994) é um cantor, compositor e ator canadense.[8][9] Em 2007, seus vídeos em que cantava covers foram vistos no YouTube por Scooter Braun, que se tornou seu agente e o levou para a cidade de Atlanta (Geórgia), para reunir-se com o cantor Usher. Em seguida, Bieber assinou contrato com a Island Records, iniciando carreira profissional em 2009, após concluir o primeiro grau escolar.
+                Justin Drew Bieber (London, 1 de março de 1994) é um cantor, compositor e ator canadense. Em 2007, seus vídeos em que cantava covers foram vistos no YouTube por Scooter Braun, que se tornou seu agente e o levou para a cidade de Atlanta (Geórgia), para reunir-se com o cantor Usher. Em seguida, Bieber assinou contrato com a Island Records, iniciando carreira profissional em 2009, após concluir o primeiro grau escolar.
             </p>
         </div>
 
@@ -37,7 +37,7 @@
 
     <h2 class="center">Meu vídeo predileto:</h2>
     <div class="container mb-50">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pvPsJFRGleA?si=2iPo46mEF3GRavhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2HM4KWMnaH0?si=xD1ttcn4XnY97Ml3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
    <hr>
     <footer>
